force-app/main/default/objects/Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Nome da cidade onde o local está situado.</description>
    <inlineHelpText>Informe a cidade.</inlineHelpText>
    <label>City</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>