force-app/main/default/objects/Location__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>Ponto de referência próximo para facilitar a localização.</description>
    <inlineHelpText>Insira uma referência próxima (ex: &quot;Ao lado do shopping&quot;).</inlineHelpText>
    <label>Landmark</label>
    <length>80</length>
    <type>Text</type>
</CustomField>