force-app/main/default/objects/Location__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Código de endereçamento postal (CEP).</description>
    <inlineHelpText>Digite o código postal.</inlineHelpText>
    <label>Postal Code</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>