force-app/main/default/objects/Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Estado ou província do endereço.</description>
    <inlineHelpText>Informe a sigla ou nome do estado.</inlineHelpText>
    <label>State</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>