force-app/main/default/objects/Location__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o endereço foi validado pela equipe administrativa.</description>
    <inlineHelpText>Marque esta caixa se o endereço já foi verificado e aprovado.</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>